--- a/랜딩페이지/index.html
+++ b/랜딩페이지/index.html
@@ -14,9 +14,9 @@
                 <img class="logo" src="images/logo.svg" alt="HODU 로고">
                 <nav>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Support</a></li>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Support</a></li>
                     </ul>
                     <button class="btn-download">Download</button>
                 </nav>
@@ -90,17 +90,17 @@
             </div>
             <nav class="footer-nav">
                 <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Support</a></li>
-                    <li><a href="#">Terms of Use</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Support</a></li>
+                    <li><a href="">Terms of Use</a></li>
                 </ul>
             </nav>
         </footer>
 
         <button class="scroll-top-btn">
-            <img class="top-btn" src="./img/top-btn.svg" alt="페이지 맨 위로 이동">
-            <img class="top-btn-hover" src="./img/top-btn-hover.svg" alt="페이지 맨 위로 이동">
+            <img class="top-btn" src="img/top-btn.svg" alt="페이지 맨 위로 이동">
+            <img class="top-btn-hover" src="img/top-btn-hover.svg" alt="페이지 맨 위로 이동">
         </button>
 
         <section class="modal">
@@ -118,9 +118,9 @@
                 <img src="images/arrow-right.svg" alt="돌아가기">
                 <nav>
                     <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Support</a></li>
+                        <li><a href="">Home</a></li>
+                        <li><a href="">About</a></li>
+                        <li><a href="">Support</a></li>
                     </ul>
                 </nav>
                 <button class="btn-download">Download</button>
