이미지추가 수정

--- a/랜딩페이지/index.html
+++ b/랜딩페이지/index.html
@@ -85,16 +85,18 @@
             </div>
         </div>
         <div class="footer-background">
+            <img class="images/img_5" src="img_5.png" />
+
         </div>
     </div>
     <footer>
         <div class="footer-link">
             <img class="logo" src="images/logo.png" alt="Hodu">
             <div>
-                <a href=""><img src="images/icon-blog.png" alt="블로그 로고 링크"></a>
-                <a href=""><img src="images/icon-insta.png" alt="인스타그램 로고 링크"></a>
-                <a href=""><img src="images/icon-facebook.png" alt="페이스북 로고 링크"></a>
-                <a href=""><img src="images/icon-toutube.png" alt="유튜브 로고 링크"></a>
+                <a href=""><img src="/랜딩페이지/images/icon-blog.png" alt="블로그 로고 링크"></a>
+                <a href=""><img src="/랜딩페이지/images/instagram.svg" alt="인스타그램 로고 링크"></a>
+                <a href=""><img src="/랜딩페이지/images/facebook.svg" alt="페이스북 로고 링크"></a>
+                <a href=""><img src="/랜딩페이지/images/youtube.svg" alt="유튜브 로고 링크"></a>
             </div>
         </div>
         <ul>
