페이지 수정

--- a/랜딩페이지/index.html
+++ b/랜딩페이지/index.html
@@ -30,10 +30,10 @@
                 ever since the 1500s, when an unknown</p>
             <button>Download</button>
         </div>
-        <img src="images/box-cat.png" alt="">
+        <img src="box-cat.png" alt="">
     </section>
     <figure>
-        <img src="images/img_4.jpg" alt="누워있는 고양이">
+        <img src="img_4.jpg" alt="누워있는 고양이">
         <div class="figure-text">
             <h3>Lorem Ipsum is simply
              dummy text of the printing and dummy text
@@ -50,9 +50,9 @@
             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
             when an unknown</p>
         <div class="article-imgbox">
-            <img src="images/img_1.jpg" alt="캣타워에 엎드려 있는 고양이">
-            <img src="images/img_2.jpg" alt="콘센트를 보고 있는 고양이">
-            <img src="images/img_3.jpg" alt="콘센트 앞에서 바라보는 고양이">
+            <img src="img_1.jpg" alt="캣타워에 엎드려 있는 고양이">
+            <img src="img_2.jpg" alt="콘센트를 보고 있는 고양이">
+            <img src="img_3.jpg" alt="콘센트 앞에서 바라보는 고양이">
         </div>
     </article>
         <div class="subscribe">
@@ -79,24 +79,24 @@
                 </p>
             </div>
             <div class="footer-mail">
-                <img src="images/mail.svg" alt="">
+                <img src="mail.svg" alt="">
                  <input type="email" placeholder="Enter you're mail address">
                  <button>Subscribe</button>
             </div>
         </div>
         <div class="footer-background">
-            <img class="images/img_5" src="img_5.png" />
+            <img class="img_5.png" src="img_5.png" />
 
         </div>
     </div>
     <footer>
         <div class="footer-link">
-            <img class="logo" src="images/logo.png" alt="Hodu">
+            <img class="logo" src="logo.png" alt="Hodu">
             <div>
-                <a href=""><img src="/랜딩페이지/images/icon-blog.png" alt="블로그 로고 링크"></a>
-                <a href=""><img src="/랜딩페이지/images/instagram.svg" alt="인스타그램 로고 링크"></a>
-                <a href=""><img src="/랜딩페이지/images/facebook.svg" alt="페이스북 로고 링크"></a>
-                <a href=""><img src="/랜딩페이지/images/youtube.svg" alt="유튜브 로고 링크"></a>
+                <a href=""><img src="blog.svg" alt="블로그 로고 링크"></a>
+                <a href=""><img src="instagram.svg" alt="인스타그램 로고 링크"></a>
+                <a href=""><img src="facebook.svg" alt="페이스북 로고 링크"></a>
+                <a href=""><img src="youtube.svg" alt="유튜브 로고 링크"></a>
             </div>
         </div>
         <ul>
