--- a/랜딩페이지/index.html
+++ b/랜딩페이지/index.html
@@ -93,6 +93,7 @@
         <div class="footer-link">
             <img class="logo" src="logo.png" alt="Hodu">
             <div>
+                <div class="ellipse-2"></div>
                 <a href=""><img src="blog.svg" alt="블로그 로고 링크"></a>
                 <a href=""><img src="instagram.svg" alt="인스타그램 로고 링크"></a>
                 <a href=""><img src="facebook.svg" alt="페이스북 로고 링크"></a>
