--- a/랜딩페이지/index.html
+++ b/랜딩페이지/index.html
@@ -92,13 +92,23 @@
     <footer>
         <div class="footer-link">
             <img class="logo" src="logo.png" alt="Hodu">
-            <div>
-                <div class="ellipse-2"></div>
-                <a href=""><img src="blog.svg" alt="블로그 로고 링크"></a>
-                <a href=""><img src="instagram.svg" alt="인스타그램 로고 링크"></a>
-                <a href=""><img src="facebook.svg" alt="페이스북 로고 링크"></a>
-                <a href=""><img src="youtube.svg" alt="유튜브 로고 링크"></a>
-            </div>
+
+           <div class="sns">
+  <a class="sns-link" href="#" aria-label="Blog">
+    <img class="sns-icon" src="blog.svg" alt="">
+  </a>
+  <a class="sns-link" href="#" aria-label="Instagram">
+    <img class="sns-icon" src="instagram.svg" alt="">
+  </a>
+  <a class="sns-link" href="#" aria-label="Facebook">
+    <img class="sns-icon" src="facebook.svg" alt="">
+  </a>
+  <a class="sns-link" href="#" aria-label="YouTube">
+    <img class="sns-icon" src="youtube.svg" alt="">
+  </a>
+</div>
+
+          
         </div>
         <ul>
             <li><a href="">About</a></li>
