--- a/index.html
+++ b/index.html
@@ -1,1 +1,121 @@
-랜딩페이지 구현
+<!DOCTYPE html>
+<html lang="ko-KR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ladingpage</title>
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <img src="logo.png" class="header-logo" alt="Hodu">
+        <div class="header-text">
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">Support</a>
+            <button>Download</button>
+        </div>
+        <a class="menu" href=""><img src="menu.svg" alt="메뉴창아이콘"></a>
+    </header>
+    <div class="wrap">
+    <section>
+        <h2 class="sc-a11y">뭔가 다운로드 할 수 있는 히어로 섹션</h2>
+        <div class="hero-textbox">
+            <h3>Lorem Ipsum is simply
+            dummy text of the printing and</h3>
+            <p>Lorem Ipsum is simply dummy text of the printing and
+                typesetting industry. 
+                Lorem Ipsum has been the industry's standard dummy text
+                ever since the 1500s, when an unknown</p>
+            <button>Download</button>
+        </div>
+        <img src="box-cat.png" alt="">
+    </section>
+    <figure>
+        <img src="img_4.jpg" alt="누워있는 고양이">
+        <div class="figure-text">
+            <h3>Lorem Ipsum is simply
+             dummy text of the printing and dummy text
+            </h3>
+        <p>
+            Lorem Ipsum is simply dummy text 
+            of the printing and typesetting industry. 
+        </p>
+        </div>
+    </figure>
+    <article>
+        <h3>dummy text of the printing and dummy</h3>
+        <p class="article-p">Lorem Ipsum is simply <strong>dummy text</strong>  of the printing and typesetting industry. 
+            Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
+            when an unknown</p>
+        <div class="article-imgbox">
+            <img src="img_1.jpg" alt="캣타워에 엎드려 있는 고양이">
+            <img src="img_2.jpg" alt="콘센트를 보고 있는 고양이">
+            <img src="img_3.jpg" alt="콘센트 앞에서 바라보는 고양이">
+        </div>
+    </article>
+        <div class="subscribe">
+            <p>
+                Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                Ipsum is simply dummy text of the printing and typesetting industry. 
+            </p>
+            <button>learn more</button>
+        </div>
+        <dialog>
+            <div>
+                <h3></h3>
+                <p></p>
+                <button></button>
+            </div>
+        </dialog>
+    <div class="footer-box">
+            <div>
+                <h3>Subscribe to our Blog post</h3>
+                <p>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+                    Lorem Ipsum has been the industry's standard dummy text 
+                </p>
+            </div>
+            <div class="footer-mail">
+                <img src="mail.svg" alt="">
+                 <input type="email" placeholder="Enter you're mail address">
+                 <button>Subscribe</button>
+            </div>
+        </div>
+        <div class="footer-background">
+            <img class="img_5.png" src="img_5.png" />
+
+        </div>
+    </div>
+    <footer>
+        <div class="footer-link">
+            <img class="logo" src="logo.png" alt="Hodu">
+
+           <div class="sns">
+  <a class="sns-link" href="#" aria-label="Blog">
+    <img class="sns-icon" src="blog.svg" alt="">
+  </a>
+  <a class="sns-link" href="#" aria-label="Instagram">
+    <img class="sns-icon" src="instagram.svg" alt="">
+  </a>
+  <a class="sns-link" href="#" aria-label="Facebook">
+    <img class="sns-icon" src="facebook.svg" alt="">
+  </a>
+  <a class="sns-link" href="#" aria-label="YouTube">
+    <img class="sns-icon" src="youtube.svg" alt="">
+  </a>
+</div>
+
+          
+        </div>
+        <ul>
+            <li><a href="">About</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Support</a></li>
+            <li><a href="">Terms of Use</a></li>
+        </ul>
+    </footer>
+</body>
+</html>
