--- a/랜딩페이지/index.html
+++ b/랜딩페이지/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" class="header-logo" alt="Hodu">
+        <img src="랜딩페이지/images/logo.png" class="header-logo" alt="Hodu">
         <div class="header-text">
             <a href="">Home</a>
             <a href="">About</a>
             <a href="">Support</a>
             <button>Download</button>
         </div>
-        <a class="menu" href=""><img src="images/menu.svg" alt="메뉴창아이콘"></a>
+        <a class="menu" href=""><img src="랜딩페이지/images/menu.svg" alt="메뉴창아이콘"></a>
     </header>
     <div class="wrap">
     <section>
@@ -30,10 +30,10 @@
                 ever since the 1500s, when an unknown</p>
             <button>Download</button>
         </div>
-        <img src="images/box-cat.png" alt="">
+        <img src="랜딩페이지/images/box-cat.png" alt="">
     </section>
     <figure>
-        <img src="images/img_4.jpg" alt="누워있는 고양이">
+        <img src="랜딩페이지/images/img_4.jpg" alt="누워있는 고양이">
         <div class="figure-text">
             <h3>Lorem Ipsum is simply
              dummy text of the printing and dummy text
@@ -50,9 +50,9 @@
             Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
             when an unknown</p>
         <div class="article-imgbox">
-            <img src="img_1.jpg" alt="캣타워에 엎드려 있는 고양이">
-            <img src="img_2.jpg" alt="콘센트를 보고 있는 고양이">
-            <img src="img_3.jpg" alt="콘센트 앞에서 바라보는 고양이">
+            <img src="랜딩페이지/images/img_1.jpg" alt="캣타워에 엎드려 있는 고양이">
+            <img src="랜딩페이지/images/img_2.jpg" alt="콘센트를 보고 있는 고양이">
+            <img src="랜딩페이지/images/img_3.jpg" alt="콘센트 앞에서 바라보는 고양이">
         </div>
     </article>
         <div class="subscribe">
@@ -79,32 +79,32 @@
                 </p>
             </div>
             <div class="footer-mail">
-                <img src="images/mail.svg" alt="">
+                <img src="랜딩페이지/images/mail.svg" alt="">
                  <input type="email" placeholder="Enter you're mail address">
                  <button>Subscribe</button>
             </div>
         </div>
         <div class="footer-background">
-            <img class="images/img_5.png" src="img_5.png" />
+            <img class="랜딩페이지/images/img_5.png" src="img_5.png" />
 
         </div>
     </div>
     <footer>
         <div class="footer-link">
-            <img class="logo" src="images/logo.png" alt="Hodu">
+            <img class="logo" src="랜딩페이지/images/logo.png" alt="Hodu">
 
            <div class="sns">
   <a class="sns-link" href="#" aria-label="Blog">
-    <img class="sns-icon" src="images/blog.svg" alt="">
+    <img class="sns-icon" src="랜딩페이지/images/blog.svg" alt="">
   </a>
   <a class="sns-link" href="#" aria-label="Instagram">
-    <img class="sns-icon" src="images/instagram.svg" alt="">
+    <img class="sns-icon" src="랜딩페이지/images/instagram.svg" alt="">
   </a>
   <a class="sns-link" href="#" aria-label="Facebook">
-    <img class="sns-icon" src="images/facebook.svg" alt="">
+    <img class="sns-icon" src="랜딩페이지/images/facebook.svg" alt="">
   </a>
   <a class="sns-link" href="#" aria-label="YouTube">
-    <img class="sns-icon" src="images/youtube.svg" alt="">
+    <img class="sns-icon" src="랜딩페이지/images/youtube.svg" alt="">
   </a>
 </div>
 
